fix project description spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ body{
   color: rgba(255,255,255,0.8);
   padding: 0;
   width: 80%;
+  margin: 5px;
 }
 
 .purple-bg:hover {
